--- a/Certifications.html
+++ b/Certifications.html
@@ -8,7 +8,11 @@
 <body>
 <header></header>
 <nav>
-
+  <ul>
+   <li><a href="portfolioMain.html">About Me</a></li>
+   <li><a class="active">Certifications</a></li>
+      <li><a>Other</a></li>
+  </ul>
 </nav>
 <main>
 
