Fixed contacts, added phone number. Added certificates

--- a/portfolioMain.html
+++ b/portfolioMain.html
@@ -22,7 +22,7 @@
 <p id="text3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum varius ligula et nulla lacinia, eget semper nibh placerat. Suspendisse elementum lectus eget enim finibus pharetra. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Aliquam non lectus at dolor semper aliquet. Praesent dignissim pharetra mollis. Nulla non augue magna. Integer rutrum rutrum augue eget pharetra. Pellentesque metus quam, luctus nec nunc ut, condimentum lacinia ante. Cras porta augue a risus consequat, eu posuere odio auctor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae;</p>
 </main>
 <footer>
-    <img src="Photos/gmail.webp" width="20px" height="20px"><p>sotoisaudy@gmail.com</p>
+    <img src="Photos/gmail.webp" width="20px" height="20px" class="contacts"><p class="contacts">sotoisaudy@gmail.com</p><img src="Photos/photo.png" width="30px" height="30px" class="contacts"><p class="contacts">617-890-9596</p>
 </footer>
 </body>
 </html>
