Added Resume page

--- a/Certifications.html
+++ b/Certifications.html
@@ -11,6 +11,7 @@
   <ul>
    <li><a href="portfolioMain.html">About Me</a></li>
    <li><a class="active">Certifications</a></li>
+      <li><a href="Resume.html">Resume</a></li>
       <li><a>Other</a></li>
   </ul>
 </nav>
