--- a/portfolioMain.html
+++ b/portfolioMain.html
@@ -11,6 +11,7 @@
     <ul>
         <li><a class="active">About Me</a></li>
         <li><a href="Certifications.html">Cerifications</a></li>
+        <li><a href="Resume.html">Resume</a></li>
         <li><a>Other</a></li>
     </ul>
 </nav>
