Added empty alts and sources for images. Added divs around embeds on certifications page. Added classes for said divs.

--- a/Certifications.html
+++ b/Certifications.html
@@ -16,8 +16,10 @@
   </ul>
 </nav>
 <main>
-<embed src="Photos/Excel.pdf">
+<div class="embeds">
+    <embed src="Photos/Excel.pdf">
     <embed src="Photos/Word.pdf">
+</div>
 </main>
 <footer>
 
