Added OSHA 10-Hour badge

--- a/Certifications.html
+++ b/Certifications.html
@@ -19,6 +19,7 @@
 <div class="embeds">
     <embed src="Photos/Excel.pdf">
     <embed src="Photos/Word.pdf">
+    <img src="Photos/badge.png">
 </div>
 </main>
 <footer>
