Centered Resume headings

--- a/Certifications.html
+++ b/Certifications.html
@@ -16,11 +16,9 @@
   </ul>
 </nav>
 <main>
-<div class="embeds">
-    <embed src="Photos/Excel.pdf">
-    <embed src="Photos/Word.pdf">
+    <img src="Photos/wordCert.png" width="500" height="300">
+    <img src="Photos/excelCert.png" width="500" height="300">
     <img src="Photos/badge.png">
-</div>
 </main>
 <footer>
 
