--- a/Resume.html
+++ b/Resume.html
@@ -18,7 +18,7 @@
   </nav>
 </header>
 <h1 class="mainHeading"> Isaudy R. Soto</h1>
-<p class="mainHeading">114 Rosseter Street | Boston, MA 02120 <br> Mobile:617-890-9596 <br> sotoisaudy@gmail.com</p>
+<p class="mainHeading, centered">114 Rosseter Street | Boston, MA 02120 <br> Mobile:617-890-9596 <br> sotoisaudy@gmail.com</p>
 <br>
 <br>
 <h3>EDUCATION</h3>
