--- a/portfolioMain.html
+++ b/portfolioMain.html
@@ -16,20 +16,27 @@
     </ul>
 </nav>
 <main>
-    <div><p class="text">
-        Born into a lower-middle class latino family in Boston, I lived a fulfilling and happy childhood. While in school I struggled with academics, and would constantly get into fights with other students, I was lucky enough to have fantastic teachers nearly the entire way through (with the occasional exception here and there). Throughout my childhood, videogames had always been a major part in my life. I first picked up a controller when I was only 4 years old, and playing games that I was far too young for, like Left 4 Dead and Halo 3. Growing up, I had the usual answers most kids my age (5-10) would have when asked about what kind of job I wanted. "I wanted to be in the army" or "I want to be a race car driver." As I grew older, however, I began to realize just how passionate I was about videogames, and by the time I was around 14, I understood that I wanted to become a Videogame Developer. Despite this desire, I did rather poorly in most computer classes I took, due to the fact that they were generally dull, mind-numbing, and all around uninteresting, as it was either very basic HTML, or typing tests. However, once I got into Madison Park Technical Vocational High School, this changed. I was going to a school where I could properly pursue coding! Not only that, but the teachers in the CPWD vocation were fantastic. They didn't feel like proper "teachers" but more like  mentors who I could (and did) have a more casual relationship with. Along with this, these people were clearly passionate to teach coding and web development, and it showed.
+    <div>
+        <h2 class="text"> Growing Up</h2><br>
+        <div class="contentDiv"><p class="text">
+            Born into a lower-middle class latino family in Boston, I lived a fulfilling and happy childhood. While in school I struggled with academics, and would constantly get into fights with other students, I was lucky enough to have fantastic teachers nearly the entire way through (with the occasional exception here and there). Throughout my childhood, videogames had always been a major part in my life. I first picked up a controller when I was only 4 years old, and playing games that I was far too young for, like Left 4 Dead and Halo 3. Growing up, I had the usual answers most kids my age (5-10) would have when asked about what kind of job I wanted. "I wanted to be in the army" or "I want to be a race car driver." As I grew older, however, I began to realize just how passionate I was about videogames, and by the time I was around 14, I understood that I wanted to become a Videogame Developer. Despite this desire, I did rather poorly in most computer classes I took, due to the fact that they were generally dull, mind-numbing, and all around uninteresting, as it was either very basic HTML, or typing tests. However, once I got into Madison Park Technical Vocational High School, this changed. I was going to a school where I could properly pursue coding! Not only that, but the teachers in the CPWD vocation were fantastic. They didn't feel like proper "teachers" but more like  mentors who I could (and did) have a more casual relationship with. Along with this, these people were clearly passionate to teach coding and web development, and it showed.
         </p>
-        <img src="Photos/placeholder.webp" alt="Hispanic teen with glasses" width="450px" height="300px">
+            <img src="Photos/placeholder.webp" alt="Hispanic teen with glasses" width="450px" height="300px">
+        </div>
     </div>
 
 <div>
-    <img src="Photos/placeholder2.jpeg" alt="Hispanic Businessman">
-    <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum varius ligula et nulla lacinia, eget semper nibh placerat. Suspendisse elementum lectus eget enim finibus pharetra. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Aliquam non lectus at dolor semper aliquet. Praesent dignissim pharetra mollis. Nulla non augue magna. Integer rutrum rutrum augue eget pharetra. Pellentesque metus quam, luctus nec nunc ut, condimentum lacinia ante. Cras porta augue a risus consequat, eu posuere odio auctor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae;</p>
+    <h2 id="text2">What am I doing now?</h2>
+    <div class="contentDiv">
+        <img src="Photos/placeholder2.jpeg" alt="Hispanic Businessman">
+        <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum varius ligula et nulla lacinia, eget semper nibh placerat. Suspendisse elementum lectus eget enim finibus pharetra. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Aliquam non lectus at dolor semper aliquet. Praesent dignissim pharetra mollis. Nulla non augue magna. Integer rutrum rutrum augue eget pharetra. Pellentesque metus quam, luctus nec nunc ut, condimentum lacinia ante. Cras porta augue a risus consequat, eu posuere odio auctor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae;</p>
+    </div>
 </div>
-<p id="text3">In the future, I aim to become a successful Video Game Developer. While I don't expect to be the next Toby Fox (Developer behind Undertale), or Edmund Mcmillen (Developer behind The Binding of Issac), I do believe that I have the ideas in mind, and the materials to draw inspiration from to make a game that hundreds, thousands, and maybe even tens of thousands of people will be able to enjoy, and they themselves be inspired by. I'm well aware of the many pitfalls I may run into on this journey, but I firmly believe that I will be able to overcome them, no matter how numerous or challenging they may be.</p>
+<h2 class="text3">What I hope to do</h2>
+<p class="text3">In the future, I aim to become a successful Video Game Developer. While I don't expect to be the next Toby Fox (Developer behind Undertale), or Edmund Mcmillen (Developer behind The Binding of Issac), I do believe that I have the ideas in mind, and the materials to draw inspiration from to make a game that hundreds, thousands, and maybe even tens of thousands of people will be able to enjoy, and they themselves be inspired by. I'm well aware of the many pitfalls I may run into on this journey, but I firmly believe that I will be able to overcome them, no matter how numerous or challenging they may be.</p>
 </main>
 <footer>
-    <div>
+    <div class="contentDiv">
         <img alt="" src="Photos/gmail.webp" width="20px" height="20px"><p>sotoisaudy@gmail.com</p><img alt="" src="Photos/photo.png" width="30px" height="30px"><p>617-890-9596</p>
     </div>
 </footer>
