Changed positioning of text in portfolioMain.html

--- a/portfolioMain.html
+++ b/portfolioMain.html
@@ -36,7 +36,7 @@
 <p class="text3">In the future, I aim to become a successful Video Game Developer. While I don't expect to be the next Toby Fox (Developer behind Undertale), or Edmund Mcmillen (Developer behind The Binding of Issac), I do believe that I have the ideas in mind, and the materials to draw inspiration from to make a game that hundreds, thousands, and maybe even tens of thousands of people will be able to enjoy, and they themselves be inspired by. I'm well aware of the many pitfalls I may run into on this journey, but I firmly believe that I will be able to overcome them, no matter how numerous or challenging they may be.</p>
 </main>
 <footer>
-    <div class="contentDiv">
+    <div class="contacts">
         <img alt="" src="Photos/gmail.webp" width="20px" height="20px"><p>sotoisaudy@gmail.com</p><img alt="" src="Photos/photo.png" width="30px" height="30px"><p>617-890-9596</p>
     </div>
 </footer>
