Added a margin-left of 10px to every piece of text in Resume.html

--- a/Resume.html
+++ b/Resume.html
@@ -21,72 +21,72 @@
 <p class="mainHeading, centered">114 Rosseter Street | Boston, MA 02120 <br> Mobile:617-890-9596 <br> sotoisaudy@gmail.com</p>
 <br>
 <br>
-<h3>EDUCATION</h3>
+<h3 class="resText">EDUCATION</h3>
 <hr>
-<h4 class="location">Madison Park Technical Vocational High School</h4> <p class="location">| Boston, MA</p>
-<p>Class of 2023 <br> Vocation: Computer Programming and Web Development<br> Northeastern University Data and Statistics course | 2021-2022</p>
-<h3>SKILLS</h3>
-<hr>
-<ul>
-  <li>OSHA 10 General Industry 10-hour course completed.</li>
-  <li>Fluent in English</li>
-  <li>Experienced in Python</li>
-  <li>Experienced in web development/HTML</li>
-  <li>Knowledgeable on data analytics</li>
-  <li>Knowledgeable on how to use Tableu</li>
-  <li>Knowledgeable on data organization.</li>
-</ul>
-<h3>CERTIFICATIONS</h3>
+<h4 class="location resText">Madison Park Technical Vocational High School</h4> <p class="location">| Boston, MA | Class of 2023 </p>
+<p class="resText">Vocation: Computer Programming and Web Development<br> Northeastern University Data and Statistics course | 2021-2022</p>
+<h3 class="resText">SKILLS</h3>
 <hr>
 <ul>
-  <li>Microsoft Word certified(June 2020)</li>
-  <li>Microsoft Excel certified(June 2020)</li>
-  <li>OSHA 10 Certified(January 2021)</li>
+  <li class="resText">OSHA 10 General Industry 10-hour course completed.</li>
+  <li class="resText">Fluent in English</li>
+  <li class="resText">Experienced in Python</li>
+  <li class="resText">Experienced in web development/HTML</li>
+  <li class="resText">Knowledgeable on data analytics</li>
+  <li class="resText">Knowledgeable on how to use Tableu</li>
+  <li class="resText">Knowledgeable on data organization.</li>
 </ul>
-<h3>VOLUNTEER EXPERIENCE</h3>
+<h3 class="resText">CERTIFICATIONS</h3>
 <hr>
-<h4 class="location">EPIC Youth Program</h4><p class="location">| Boston, MA</p> <p class="location">April 2017 - June 2018</p>
-<p>
+<ul>
+  <li class="resText">Microsoft Word certified(June 2020)</li>
+  <li class="resText">Microsoft Excel certified(June 2020)</li>
+  <li class="resText">OSHA 10 Certified(January 2021)</li>
+</ul>
+<h3 class="resText">VOLUNTEER EXPERIENCE</h3>
+<hr>
+<h4 class="location">EPIC Youth Program</h4><p class="location resText">| Boston, MA</p> <p class="location">April 2017 - June 2018</p>
+<p class="resText">
   Youth Program Experince
 </p>
 <ul>
-  <li>Learned /improved communication skils.</li>
-  <li> Participated in team building excersises, where I learned valuable communication/cooperation skills.</li>
-  <li>Learned about job professionalism.</li>
-  <li>Attended a youth center for 15 hours a week during the program.</li>
+  <li class="resText">Learned /improved communication skils.</li>
+  <li class="resText"> Participated in team building excersises, where I learned valuable communication/cooperation skills.</li>
+  <li class="resText">Learned about job professionalism.</li>
+  <li class="resText">Attended a youth center for 15 hours a week during the program.</li>
 </ul>
-<h3>WORK EXPERIENCE</h3>
+<h3 class="resText">WORK EXPERIENCE</h3>
 <hr>
-<h4 class="location">Timothy Smith Network</h4><p class="location">| Boston, MA. June 2021 - August 2021</p>
-<p>Youth Job Experience</p>
+<h4 class="location resText">Timothy Smith Network</h4><p class="location">| Boston, MA. June 2021 - August 2021</p>
+<p class="resText">Youth Job Experience</p>
 <ul>
-  <li>Became experienced in using micro bits/arduinos</li>
-  <li>Learned very basic/rudimentary skills in wiring/electricity work.</li>
-  <li>Became somewhat knowledgeable in indoor gardening.</li>
-  <li>Worked 6 hours a day for 4 days a week, earning $13.50 an hour, pay was dependant on time I had my camera on.</li>
-  <li>Learned about leadership skills, became more knowledgeable about healthy eating, health problems regarding food, and the lack of healthy food options in many areas around not only the state, but around the nation as well.</li>
+  <li class="resText">Became experienced in using micro bits/arduinos</li>
+  <li class="resText">Learned very basic/rudimentary skills in wiring/electricity work.</li>
+  <li class="resText">Became somewhat knowledgeable in indoor gardening.</li>
+  <li class="resText">Worked 6 hours a day for 4 days a week, earning $13.50 an hour, pay was dependant on time I had my camera on.</li>
+  <li class="resText">Learned about leadership skills, became more knowledgeable about healthy eating, health problems regarding food, and the lack of healthy food options in many areas around not only the state, but around the nation as well.</li>
 </ul>
-<h4 class="location">Fresh Films</h4> <p class="location">| Boston, MA. June 2022 - August 2022</p>
-<p>Youth Job Experience</p>
+<h4 class="location resText">Fresh Films</h4> <p class="location">| Boston, MA. June 2022 - August 2022</p>
+<p class="resText">Youth Job Experience</p>
 <ul>
-  <li>Learned how to handle audio/recording equipment</li>
-  <li>Learned about how films of any kind were made.</li>
-  <li>Became involved in the process of creating a show (recording audio/visuals.)</li>
-  <li>Captured behind-the-scenes footage.</li>
+  <li class="resText">Learned how to handle audio/recording equipment</li>
+  <li class="resText">Learned about how films of any kind were made.</li>
+  <li class="resText">Became involved in the process of creating a show (recording audio/visuals.)</li>
+  <li class="resText">Captured behind-the-scenes footage.</li>
 </ul>
-<h3>AWARDS & ACHIEVEMENTS</h3>
-<hr>
-<ul>
-  <li> Max Honor Roll  2019-2020</li>
-  <li> Honor Roll 2020-2021</li>
-</ul>
-<h3>INTERESTS & ACTIVITIES</h3>
+<h3 class="resText">AWARDS & ACHIEVEMENTS</h3>
 <hr>
 <ul>
-  <li>Swimming</li>
-  <li>Bike riding</li>
-  <li>Video Game Developing (Interest)</li>
-  <li>Gaming(Activity/Main Hobby)</li>
+  <li class="resText"> Max Honor Roll  2019-2020</li>
+  <li class="resText"> Honor Roll 2020-2021</li>
+</ul>
+<h3 class="resText">INTERESTS & ACTIVITIES</h3>
+<hr>
+<ul>
+  <li class="resText">Swimming</li>
+  <li class="resText">Bike riding</li>
+  <li class="resText">Video Game Developing (Interest)</li>
+  <li class="resText">Gaming(Activity/Main Hobby)</li>
 </ul>
 </body>
 </html>
