Updated a lot of things

--- a/Certifications.html
+++ b/Certifications.html
@@ -19,6 +19,8 @@
     <img src="Photos/wordCert.png" width="500" height="300">
     <img src="Photos/excelCert.png" width="500" height="300">
     <img src="Photos/badge.png">
+    <img src="Photos/edubecert.png" width="932" height="660">
+
 </main>
 <footer>
 
