--- a/Resume.html
+++ b/Resume.html
@@ -39,9 +39,10 @@
 <h3 class="resText">CERTIFICATIONS</h3>
 <hr>
 <ul>
-  <li class="resText">Microsoft Word certified(June 2020)</li>
-  <li class="resText">Microsoft Excel certified(June 2020)</li>
-  <li class="resText">OSHA 10 Certified(January 2021)</li>
+  <li class="resText">Microsoft Word certified (June 2020)</li>
+  <li class="resText">Microsoft Excel certified (June 2020)</li>
+  <li class="resText">OSHA 10 Certified (January 2021)</li>
+  <li class="resText">Edube Python Certified (April 2023)</li>
 </ul>
 <h3 class="resText">VOLUNTEER EXPERIENCE</h3>
 <hr>
@@ -57,7 +58,7 @@
 </ul>
 <h3 class="resText">WORK EXPERIENCE</h3>
 <hr>
-<h4 class="location resText">Timothy Smith Network</h4><p class="location">| Boston, MA. June 2021 - August 2021</p>
+<h4 class="location resText">Timothy Smith Network</h4> <p class="location">| Boston, MA. June 2021 - August 2021</p>
 <p class="resText">Youth Job Experience</p>
 <ul>
   <li class="resText">Became experienced in using micro bits/arduinos</li>
@@ -73,6 +74,14 @@
   <li class="resText">Learned about how films of any kind were made.</li>
   <li class="resText">Became involved in the process of creating a show (recording audio/visuals.)</li>
   <li class="resText">Captured behind-the-scenes footage.</li>
+</ul>
+<h4 class="location resText">Greensight </h4> <p class="location"> | Boston, MA. February 2023 - July 2023</p>
+<p class="resText">Youth Job Experience</p>
+<ul>
+  <li class="resText">Learned how to use Docker</li>
+  <li class="resText">Learned how to use VSCode</li>
+  <li class="resText">Improved communication skills</li>
+  <li class="resText">Built a strong working relationship/network that I can rely on.</li>
 </ul>
 <h3 class="resText">AWARDS & ACHIEVEMENTS</h3>
 <hr>
